<resources>
    <string name="app_name">Popfit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="exercise_title"><b>Упражнения</b></string>
    <string name="add_exercise_title"><b>Добавить упражнение</b></string>

    <string name="current_weight">Текущий рабочий вес</string>
    <string name="weight">Вес</string>
    <string name="up_next_time">Повысить в следующий раз?</string>
    <string name="cancel">Отменить</string>
    <string name="save">Сохранить</string>

    <string name="hint_title">Название</string>
    <string name="hint_start_weight">Начальный вес</string>

    <string name="exercise_added">Упражнение добавлено</string>
    <string name="current_exercise_weight_cardview">Текущий вес - %1$s%2$s</string>
</resources>