<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_view_background"
    tools:context=".ExecriceInfoFragment">

    <ImageView
        android:id="@+id/imageView_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:padding="7dp"
        android:src="@drawable/arrow_back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/imageView_back"
        app:layout_constraintStart_toEndOf="@id/imageView_back"
        app:layout_constraintTop_toTopOf="@id/imageView_back"
        tools:text="Жим гантелей лежа" />

    <ImageView
        android:id="@+id/imageView_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:src="@drawable/delete_icon"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/title"
        app:layout_constraintTop_toTopOf="@id/title" />

    <TextView
        android:id="@+id/textView_current_weight"
        style="@style/SubtitleStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/current_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/textView_current_weight"
        app:layout_constraintEnd_toEndOf="@id/imageView_delete"
        app:layout_constraintTop_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"

            android:hint="@string/weight" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView_up_next_time"
        style="@style/SubtitleStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/up_next_time"
        app:layout_constraintEnd_toEndOf="@id/textView_current_weight"
        app:layout_constraintStart_toStartOf="@id/textView_current_weight"
        app:layout_constraintTop_toBottomOf="@id/textView_current_weight" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switch_up_next_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/textView_up_next_time"
        app:layout_constraintEnd_toEndOf="@id/imageView_delete"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/textView_up_next_time"
        app:layout_constraintTop_toTopOf="@id/textView_up_next_time"
        tools:checked="true" />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:icon="@drawable/cancel_icon"
        app:layout_constraintEnd_toStartOf="@id/button_confirm"
        app:layout_constraintTop_toTopOf="@id/button_confirm"
        tools:text="@string/cancel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/save"
        app:icon="@drawable/confitm_icon"
        app:layout_constraintEnd_toEndOf="@id/switch_up_next_time"
        app:layout_constraintTop_toBottomOf="@id/textView_up_next_time" />


</androidx.constraintlayout.widget.ConstraintLayout>